--- a/vue-demo-cnodejs/package.json
+++ b/vue-demo-cnodejs/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ivueui": "^2.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
